--- a/src/components/NavButton.module.scss
+++ b/src/components/NavButton.module.scss
@@ -43,7 +43,7 @@
         height: 1px;
         display: block;
         position: relative;
-        background: $_black;
+        background: $_gray-89;
         transition: all 0.3s $cubic;
         transition-delay: 0s;
       }
