--- a/src/components/Contents.module.scss
+++ b/src/components/Contents.module.scss
@@ -2,33 +2,17 @@
 
 .contents {
   align-items: stretch;
+  background-color: white;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  margin-bottom: 0;
-  margin-left: calc(5.5rem + 30% + env(safe-area-inset-left));
-  margin-right: calc(5.5rem + env(safe-area-inset-right));
-  margin-top: 0;
-  max-width: calc(780px);
-  width: calc(
-    0.618 - 11rem - env(safe-area-inset-left) - env(safe-area-inset-right)
-  );
-
-  @media (max-width: $small-screen-max) {
-    max-width: none;
-    width: calc(
-      70% - 11rem - env(safe-area-inset-left) - env(safe-area-inset-right)
-    );
-  }
+  padding: 0;
+  padding-left: calc(5.5rem);
+  padding-right: calc(5.5rem);
 
   @media (max-width: $mobile-max) {
-    margin-left: calc(2.1rem + env(safe-area-inset-left));
-    margin-right: calc(2.1rem + env(safe-area-inset-right));
-    margin-top: calc(44px + env(safe-area-inset-top));
-    max-width: none;
-    width: calc(
-      100% - 2.1rem * 2 - env(safe-area-inset-left) - env(safe-area-inset-right)
-    );
+    padding-left: calc(2.1rem);
+    padding-right: calc(2.1rem);
   }
 
   .section {
