--- a/src/components/Navigation.module.scss
+++ b/src/components/Navigation.module.scss
@@ -20,34 +20,37 @@
   flex-direction: row;
 }
 
-.flexWrapper {
+@mixin navigation-row {
+  margin-bottom: 3.4rem;
+}
+
+.navigation {
   @include container-column-stretch;
 
-  height: 100%;
-  position: fixed;
-  top: 0;
-  width: 30%;
+  flex-grow: 1;
+  padding: 3.4rem;
+  padding-left: 5.5rem;
 
   @media (max-width: $mobile-max) {
-    background-color: white;
-    height: 44px;
-    overflow: hidden;
+    background-color: black;
+    padding: 0;
     transition: all 0.5s ease-out, background 1s ease-out;
-    width: 100vw;
-    padding-top: env(safe-area-inset-top);
-    z-index: 999;
+  }
+
+  &:last-child {
+    margin-bottom: 0;
   }
 
   .header {
+    @include navigation-row;
+
     align-items: stretch;
     display: flex;
     flex-direction: column;
     flex-grow: 0;
     flex-shrink: 0;
-    margin-bottom: 0;
-    margin-left: 3.4rem;
-    margin-right: 3.4rem;
-    margin-top: 3.4rem;
+    padding-left: calc(2.1rem + env(safe-area-inset-left));
+    padding-right: calc(2.1rem + env(safe-area-inset-right));
 
     @media (max-width: $mobile-max) {
       align-items: center;
@@ -57,8 +60,6 @@
       height: 44px;
       max-width: 100vw;
       margin: 0;
-      margin-left: calc(2.1rem + env(safe-area-inset-left));
-      margin-right: calc(2.1rem + env(safe-area-inset-right));
     }
 
     .navButton {
@@ -100,23 +101,19 @@
     }
   }
 
-  .navigation {
+  .navigationBar {
+    @include navigation-row;
+
     align-items: flex-end;
     display: flex;
     flex-direction: column;
     flex-grow: 0;
     flex-shrink: 0;
-    margin-bottom: 0;
-    margin-left: 3.4rem;
-    margin-right: 3.4rem;
-    margin-top: 3.4rem;
 
     @media (max-width: $mobile-max) {
       align-items: stretch;
       display: flex;
       flex-direction: column;
-      margin: 0;
-      margin-top: 44px;
       opacity: 0;
       position: fixed;
       top: 0;
@@ -129,15 +126,12 @@
   }
 
   .tableOfContents {
+    @include navigation-row;
     @include container-row-stretch;
 
     flex-grow: 1;
     flex-shrink: 1;
     justify-content: flex-end;
-    margin-bottom: 6.3rem;
-    margin-left: 3.4rem;
-    margin-right: 3.4rem;
-    margin-top: 3.4rem;
 
     @media (max-width: $small-screen-max) {
       margin-left: 0;
@@ -153,6 +147,22 @@
       bottom: 0;
       pointer-events: none;
       transition: all 0.3s ease-in;
+    }
+  }
+
+  .siteFooter {
+    align-items: stretch;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 0;
+    justify-content: flex-end;
+
+    @media (max-width: $mobile-max) {
+      display: none;
+    }
+
+    &.growEnabled {
+      flex-grow: 1;
     }
   }
 
@@ -185,7 +195,7 @@
       pointer-events: none;
     }
 
-    .navigation {
+    .navigationBar {
       display: flex;
       opacity: 1;
       transition: all 0.3s ease-in;
@@ -209,34 +219,23 @@
       pointer-events: auto;
     }
 
-    .navigation {
+    .navigationBar {
       display: none;
       opacity: 0;
       transition: all 0.3s ease-in;
       pointer-events: none;
     }
   }
-
-  &.bordered {
-    @media (max-width: $mobile-max) {
-      border-bottom: 0.5px solid transparentize(black, 0.9);
-      transition: all 0.1s ease-in;
-    }
-  }
-
-  &.errorCode404 {
-    width: 100%;
-  }
 }
 
 @supports (
   (-webkit-backdrop-filter: blur(1.8em)) or (backdrop-filter: blur(2em))
 ) {
-  .flexWrapper {
+  .navigation {
     @media (max-width: $mobile-max) {
       -webkit-backdrop-filter: saturate(180%) blur(20px);
       backdrop-filter: saturate(180%) blur(20px);
-      background-color: transparentize(white, 0.7);
+      background-color: transparentize(black, 0.3);
     }
   }
 }
