--- a/src/components/NavigationBar.module.scss
+++ b/src/components/NavigationBar.module.scss
@@ -13,7 +13,7 @@
   }
 }
 
-.flexWrapper {
+.navigationBar {
   @include container-column;
 
   color: $color-ui-nav-headline-normal;
@@ -25,7 +25,7 @@
     flex-direction: row;
     flex-grow: 0;
     flex-shrink: 0;
-    text-align: left;
+    padding-top: 44px;
   }
 
   .list {
@@ -43,7 +43,7 @@
       margin-bottom: 3.4rem;
 
       @media (max-width: $mobile-max) {
-        border-bottom: solid 1px $_gray-21;
+        border-bottom: solid 0.5px $_gray-55;
         justify-content: flex-start;
         margin: 0;
         margin-left: calc(2.1em + env(safe-area-inset-left));
@@ -57,10 +57,6 @@
 
       &:last-child {
         margin-bottom: 0;
-
-        @media (max-width: $mobile-max) {
-          margin-bottom: 2.1rem;
-        }
       }
 
       .navigationItemContents {
