--- a/src/components/SiteTitle.module.scss
+++ b/src/components/SiteTitle.module.scss
@@ -14,9 +14,8 @@
   text-transform: uppercase;
 
   @media (max-width: $mobile-max) {
-    color: $_gray-21;
-
     font-size: 1.5em;
+    font-weight: 300;
     line-height: calc(29 / 15);
     margin-bottom: -0.9rem;
     margin-top: -0.9rem;
