--- a/src/components/TableOfContents.module.scss
+++ b/src/components/TableOfContents.module.scss
@@ -27,7 +27,9 @@
   flex-grow: 1;
   flex-shrink: 1;
   max-width: 396px;
+  min-height: 0;
   width: calc(100% - 4.2rem);
+  padding-top: 2.1rem;
 
   @media (max-width: $small-screen-max) {
     max-width: none;
@@ -45,11 +47,11 @@
     align-items: flex-end;
     display: flex;
     flex-direction: column;
+    flex-grow: 0;
     flex-shrink: 0;
-    padding-bottom: 2.1rem;
+    margin-bottom: 2.1rem;
     padding-left: 2.1rem;
     padding-right: 2.1rem;
-    padding-top: 2.1rem;
 
     @media (max-width: $mobile-max) {
       @include horizontal-margin;
@@ -58,6 +60,7 @@
       flex-direction: row;
       justify-content: space-around;
       height: 44px;
+      margin-bottom: 0;
       padding: 0;
     }
 
@@ -74,8 +77,9 @@
       text-transform: uppercase;
 
       @media (max-width: $mobile-max) {
-        color: $_gray-55;
+        color: $_gray-89;
         font-size: 1.5em;
+        font-weight: 300;
         margin-bottom: 0;
         margin-top: 0;
         opacity: 0;
@@ -96,9 +100,9 @@
     flex-grow: 1;
     flex-shrink: 1;
     -ms-overflow-style: none;
-    overflow-x: hidden;
     overflow-y: scroll ;
-    margin-bottom: calc(2.1rem - 0.3rem);
+    margin-bottom: calc(2.1rem - 0.3rem + env(safe-area-inset-bottom));
+    min-height: 0;
     padding-left: 2.1rem;
     padding-right: 2.1rem;
 
@@ -114,26 +118,22 @@
       align-items: stretch;
       display: flex;
       flex-direction: column;
-      flex-grow: 1;
+      flex-grow: 0;
       flex-shrink: 1;
       list-style: none;
       margin: 0;
-      margin-top: 2.1rem;
+      min-height: 0;
       padding: 0;
-
-      &:first-child {
-        margin-top: 0;
-      }
 
       .section {
         align-items: stretch;
-        counter-increment: ordered-list;
         display: flex;
         flex-direction: column;
+        flex-grow: 0;
         flex-shrink: 0;
         margin: 0;
-        padding-bottom: calc(2.1rem / 2);
-        padding-top: calc(2.1rem / 2);
+        padding-bottom: calc(3.4rem * (1 - 0.618));
+        padding-top: calc(3.4rem * 0.618);
 
         @media (max-width: $mobile-max) {
           opacity: 0;
@@ -166,8 +166,6 @@
             line-height: calc(29 / 15);
             margin-bottom: -0.9rem;
             margin-top: -1.2rem;
-            padding-bottom: 1.7rem;
-            padding-top: 1.7rem;
           }
 
           .sectionName {
