--- a/src/pages/404.module.scss
+++ b/src/pages/404.module.scss
@@ -2,45 +2,50 @@
 @import '../styles/fonts';
 @import '../styles/responsive';
 
-.main {
+.errorInfoWrapper {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: calc(61.8%);
   width: 100%;
 
-  .errorInfoWrapper {
+  .errorInfo {
     align-items: center;
+    background-color: black;
+    color: white;
     display: flex;
+    font-family: $font-text-monospaced;
+    font-size: 1.5rem;
     flex-direction: column;
-    height: calc(
-      (100% - env(safe-area-inset-top) - env(safe-area-inset-bottom)) * 0.618
-    );
-    justify-content: space-around;
-    position: absolute;
-    width: 100%;
+    margin-bottom: 5.5rem;
+    margin-left: 2.1rem;
+    margin-right: 2.1rem;
+    margin-top: 5.5rem;
+    padding: 5.5rem;
+    text-align: center;
+    text-transform: uppercase;
+    z-index: 500;
 
     @media (max-width: $mobile-max) {
-      justify-content: space-around;
-      top: 44px;
+      margin-top: 2.1rem;
+      padding: 2.1rem;
     }
 
-    .errorInfo {
-      background-color: black;
-      color: white;
-      font-family: $font-text-monospaced;
-      font-size: 1.5rem;
-      margin-left: 2.1rem;
-      margin-right: 2.1rem;
-      padding: 5.5rem;
-      text-align: center;
-      text-transform: uppercase;
-      z-index: 500;
+    .title {
+      margin-bottom: 2.1rem;
+    }
+  }
+}
 
-      @media (max-width: $mobile-max) {
-        margin-top: 2.1rem;
-        padding: 2.1rem;
-      }
-
-      .title {
-        margin-bottom: 2.1rem;
-      }
+@supports (
+  (-webkit-backdrop-filter: blur(1.8em)) or (backdrop-filter: blur(2em))
+) {
+  .errorInfo {
+    @media (max-width: $mobile-max) {
+      -webkit-backdrop-filter: saturate(180%) blur(20px);
+      backdrop-filter: saturate(180%) blur(20px);
+      background-color: transparentize(black, 0.3);
     }
   }
 }
