--- a/src/components/Navigation.module.scss
+++ b/src/components/Navigation.module.scss
@@ -28,6 +28,7 @@
   @include container-column-stretch;
 
   flex-grow: 1;
+  overflow: hidden;
   padding: 3.4rem;
   padding-left: 5.5rem;
 
@@ -49,8 +50,8 @@
     flex-direction: column;
     flex-grow: 0;
     flex-shrink: 0;
-    padding-left: calc(2.1rem + env(safe-area-inset-left));
-    padding-right: calc(2.1rem + env(safe-area-inset-right));
+    padding-left: calc(env(safe-area-inset-left));
+    padding-right: calc(env(safe-area-inset-right));
 
     @media (max-width: $mobile-max) {
       align-items: center;
@@ -69,7 +70,7 @@
 
       @media (max-width: $mobile-max) {
         display: flex;
-        margin-left: -1.2rem;
+        margin-left: 1rem;
         margin-right: 2.1rem;
         transition: all 0.3s ease-in;
         z-index: 999;
@@ -82,7 +83,7 @@
       @media (max-width: $mobile-max) {
         opacity: 1;
         transform: scale(1) translateY(0);
-        transition: all 0.3s ease-in;
+        transition: transform 0.5s $cubic, opacity 0.6s $cubic;
       }
     }
 
@@ -94,7 +95,7 @@
       @media (max-width: $mobile-max) {
         display: flex;
         margin-left: 2.1rem;
-        margin-right: -1.2rem;
+        margin-right: 1rem;
         transition: all 0.3s ease-in;
         z-index: 999;
       }
@@ -131,6 +132,7 @@
 
     flex-grow: 1;
     flex-shrink: 1;
+    min-height: 0;
     justify-content: flex-end;
 
     @media (max-width: $small-screen-max) {
@@ -155,6 +157,7 @@
     display: flex;
     flex-direction: column;
     flex-grow: 0;
+    flex-shrink: 1;
     justify-content: flex-end;
 
     @media (max-width: $mobile-max) {
