--- a/src/components/SiteFooter.module.scss
+++ b/src/components/SiteFooter.module.scss
@@ -20,17 +20,15 @@
 .siteFooter {
   align-items: stretch;
   display: flex;
-  flex-direction: column-reverse;
-  flex-grow: 1;
-  flex-shrink: 0;
+  flex-direction: column;
+  flex-shrink: 1;
 
   .siteInfo {
     align-items: stretch;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    flex-grow: 1;
-    flex-shrink: 0;
+    flex-shrink: 1;
     margin: 0;
 
     .siteInfoItem {
