--- a/src/components/Navigation.module.scss
+++ b/src/components/Navigation.module.scss
@@ -50,8 +50,12 @@
     flex-direction: column;
     flex-grow: 0;
     flex-shrink: 0;
-    padding-left: calc(env(safe-area-inset-left));
-    padding-right: calc(env(safe-area-inset-right));
+    padding-left: 0;
+    padding-left: constant(safe-area-inset-left);
+    padding-left: env(safe-area-inset-left);
+    padding-right: 0;
+    padding-right: constant(safe-area-inset-right);
+    padding-right: env(safe-area-inset-right);
 
     @media (max-width: $mobile-max) {
       align-items: center;
