--- a/src/components/NavigationBar.module.scss
+++ b/src/components/NavigationBar.module.scss
@@ -46,7 +46,11 @@
         border-bottom: solid 0.5px $_gray-55;
         justify-content: flex-start;
         margin: 0;
+        margin-left: 2.1em;
+        margin-left: calc(2.1em + constant(safe-area-inset-left));
         margin-left: calc(2.1em + env(safe-area-inset-left));
+        margin-right: 2.1em;
+        margin-right: calc(2.1em + constant(safe-area-inset-right));
         margin-right: calc(2.1em + env(safe-area-inset-right));
         opacity: 0;
         padding-bottom: 2.1rem;
