--- a/src/components/SocialBar.module.scss
+++ b/src/components/SocialBar.module.scss
@@ -2,68 +2,72 @@
 @import '../styles/animations';
 
 .social {
-    align-items: flex-start;
+  align-items: flex-start;
+  display: flex;
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  margin-top: 3.4rem;
+
+  @media (max-width: $mobile-max) {
+    flex-direction: row;
+    margin-left: calc(2.1rem);
+    margin-left: calc(2.1rem + constant(safe-area-inset-left));
+    margin-left: calc(2.1rem + env(safe-area-inset-left));
+    margin-right: calc(2.1rem);
+    margin-right: calc(2.1rem + constant(safe-area-inset-right));
+    margin-right: calc(2.1rem + env(safe-area-inset-right));
+    opacity: 0;
+    transform: scale(1.15) translateY(-30px);
+    transition: transform 0.5s $cubic, opacity 0.6s $cubic;
+  }
+
+  .item {
+    align-items: center;
     display: flex;
-    flex-grow: 0;
-    flex-shrink: 0;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    margin-top: 3.4rem;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-left: 2.1rem;
+
+    &:last-child {
+      margin-left: 0;
+    }
 
     @media (max-width: $mobile-max) {
-        flex-direction: row;
-        margin-left: calc(2.1rem + env(safe-area-inset-left));
-        margin-right: calc(2.1rem + env(safe-area-inset-right));
-        opacity: 0;
-        transform: scale(1.15) translateY(-30px);
-        transition: transform 0.5s $cubic, opacity 0.6s $cubic;
+      margin-left: 0;
+      min-width: 4.4rem;
+      min-height: 4.4rem;
     }
 
-    .item {
+    a {
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+
+      .icon {
         align-items: center;
         display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        margin-left: 2.1rem;
+        flex-direction: row;
+        justify-content: center;
+        margin-bottom: 1.3rem;
+      }
 
-        &:last-child {
-            margin-left: 0;
-        }
-
-        @media (max-width: $mobile-max) {
-            margin-left: 0;
-            min-width: 4.4rem;
-            min-height: 4.4rem;
-        }
-
-        a {
-            align-items: center;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-
-            .icon {
-                align-items: center;
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
-                margin-bottom: 1.3rem;
-            }
-
-            .title {
-                font-size: 1.1em;
-                font-weight: 400;
-                line-height: 1.18;
-                margin-bottom: -0.3rem;
-                margin-top: -0.5rem;
-            }
-        }
+      .title {
+        font-size: 1.1em;
+        font-weight: 400;
+        line-height: 1.18;
+        margin-bottom: -0.3rem;
+        margin-top: -0.5rem;
+      }
     }
+  }
 
-    &.open {
-        opacity: 1;
-        transform: scale(1) translateY(0px);
-        transition: transform 0.3s $cubic, opacity 0.3s $cubic;
-        transition-delay: 0.2s;
-    }
+  &.open {
+    opacity: 1;
+    transform: scale(1) translateY(0px);
+    transition: transform 0.3s $cubic, opacity 0.3s $cubic;
+    transition-delay: 0.2s;
+  }
 }
