--- a/src/components/CodeBlock.module.scss
+++ b/src/components/CodeBlock.module.scss
@@ -103,6 +103,7 @@
       font-family: $font-text-monospaced;
       font-size: 1.3em;
       font-weight: 400;
+      font-style: normal;
       line-height: calc(15 / 13);
       margin-bottom: -0.1rem;
       margin-top: -0.1rem;
@@ -127,6 +128,7 @@
       font-family: $font-text-monospaced;
       font-size: 1.1em;
       font-weight: 400;
+      font-style: normal;
       line-height: calc(13 / 11);
       margin-bottom: -0.3rem;
       margin-top: -0.2rem;
@@ -146,6 +148,7 @@
     font-family: $font-text-monospaced;
     font-size: 1.3em;
     font-weight: 400;
+    font-style: normal;
     line-height: calc(26 / 13);
     padding-bottom: 2.4rem;
     padding-left: 2.1rem;
