--- a/src/components/TableOfContents.module.scss
+++ b/src/components/TableOfContents.module.scss
@@ -181,6 +181,7 @@
           }
 
           .sectionIndex {
+            margin-left: 0.5rem;
             font-family: $font-text-monospaced;
           }
         }
