--- a/src/components/InlineCode.module.scss
+++ b/src/components/InlineCode.module.scss
@@ -13,7 +13,7 @@
   margin-top: -0.6rem;
   padding-bottom: 0.1rem;
   padding-left: 0.3rem;
-  padding-right: 0.3rem;
+  padding-right: calc(0.3rem + 2px);
   padding-top: 0;
   word-break: break-word;
 }
