--- a/src/components/Taxonomy.module.scss
+++ b/src/components/Taxonomy.module.scss
@@ -1,32 +1,24 @@
 @import '../styles/colors';
 
-@mixin container-row-baseline {
-  align-items: baseline;
-  display: flex;
-  flex-direction: row;
-}
-
 @mixin text {
   color: $color-ui-caption-label;
   font-size: 1.1em;
   font-weight: 500;
-  line-height: 1;
-  margin-bottom: -0.2rem;
-  margin-top: -0.1rem;
+  line-height: calc(21 / 11);
+  margin-bottom: -0.7rem;
+  margin-top: -0.6rem;
   text-transform: uppercase;
 }
 
 .taxonomy {
-  @include container-row-baseline;
+  @include text;
+  display: inline;
 
   .taxonomyName {
-    @include container-row-baseline;
-
-    .taxonomyNameContent {
-      @include text;
-    }
+    display: inline;
 
     &::after {
+      display: inline-block;
       background: $color-ui-caption-separator;
       content: '';
       height: 0.8rem;
@@ -38,25 +30,18 @@
   }
 
   .taxonomyItemList {
-    @include container-row-baseline;
-
-    list-style: none;
+    display: inline;
     margin: 0;
     padding: 0;
 
     .taxonomyItem {
-      @include container-row-baseline;
-
+      display: inline-block;
       margin: 0;
       margin-right: 0.8rem;
       padding: 0;
 
       &:last-child {
         margin-right: 0;
-      }
-
-      .taxonomyItemContent {
-        @include text;
       }
     }
   }
