--- a/src/components/Footnotes.module.scss
+++ b/src/components/Footnotes.module.scss
@@ -19,7 +19,9 @@
       display: flex;
       flex-direction: column;
       margin: 0;
-      margin-bottom: 5.5rem;
+      margin-bottom: calc(5.5rem - 3.4rem);
+      margin-top: -2.1rem;
+      padding: 0;
       padding-bottom: 3.4rem;
       padding-top: 2.1rem;
 
@@ -29,7 +31,7 @@
       }
 
       &:last-child {
-        margin-bottom: 0;
+        margin-bottom: calc(-3.4rem);
       }
 
       > :first-child {
@@ -46,17 +48,17 @@
 .label {
   font-family: $font-text-monospaced;
   font-size: (15em / 15);
-  font-weight: 400;
+  font-weight: 300;
   margin-bottom: -1.1rem;
   margin-right: 0.8rem;
   margin-top: -1.2rem;
 
   &::before {
-    content: '[';
+    content: '<';
   }
 
   &::after {
-    content: ']';
+    content: '>';
   }
 }
 
