--- a/src/components/Table.module.scss
+++ b/src/components/Table.module.scss
@@ -9,6 +9,7 @@
   margin: 0;
   margin-bottom: 3.4rem;
   -ms-overflow-style: none;
+  -webkit-overflow-scrolling: touch;
   overflow-x: scroll;
   width: auto;
 }
