--- a/src/components/InlineCode.module.scss
+++ b/src/components/InlineCode.module.scss
@@ -9,9 +9,9 @@
   font-size: calc(13em / 17);
   font-weight: 400;
   line-height: calc(29 / 13);
-  margin-bottom: -0.5rem;
+  margin-bottom: -0.4rem;
   margin-top: -0.6rem;
-  padding-bottom: 0.1rem;
+  padding-bottom: 0;
   padding-left: 0.3rem;
   padding-right: calc(0.3rem + 2px);
   padding-top: 0;
