--- a/src/components/ListItem.module.scss
+++ b/src/components/ListItem.module.scss
@@ -9,6 +9,14 @@
   margin: 0;
   margin-bottom: 3.4rem;
 
+  > :first-child {
+    margin-top: 0;
+  }
+
+  > :last-child {
+    margin-bottom: 0;
+  }
+
   &:last-child {
     margin-bottom: 0;
   }
