--- a/src/components/MathBlock.module.scss
+++ b/src/components/MathBlock.module.scss
@@ -8,6 +8,7 @@
   margin-right: -2.1rem;
   margin-top: 0;
   -ms-overflow-style: none;
+  -webkit-overflow-scrolling: touch;
   overflow-x: scroll;
   padding: 2.1rem;
 
