--- a/src/components/Picture.module.scss
+++ b/src/components/Picture.module.scss
@@ -1,12 +1,8 @@
 .picture {
   display: block;
-  margin-bottom: 3.4rem;
-  margin-left: -2.1rem;
-  margin-right: -2.1rem;
-  margin-top: 0;
-  width: calc(100% + 2.1rem * 2);
-
-  img {
-    width: 100%;
-  }
+  margin: 0;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+  padding: 0;
 }
