--- a/src/components/SocialBar.module.scss
+++ b/src/components/SocialBar.module.scss
@@ -29,6 +29,7 @@
     flex-direction: column;
     justify-content: space-around;
     margin-left: 2.1rem;
+    max-width: 6.4rem;
 
     &:last-child {
       margin-left: 0;
@@ -57,9 +58,10 @@
       .title {
         font-size: 1.1em;
         font-weight: 400;
-        line-height: 1.18;
+        line-height: calc(13 / 11);
         margin-bottom: -0.3rem;
         margin-top: -0.5rem;
+        text-align: center;
       }
     }
   }
