--- a/src/components/InlineMath.module.scss
+++ b/src/components/InlineMath.module.scss
@@ -3,15 +3,13 @@
 .inlineMath {
   background-color: $color-content-math-block-background;
   border-left: solid 2px $color-content-math-block-indicator;
-  border-right: solid 2px $color-content-math-block-indicator;
-  font-size: 0.73em;
+  font-size: 0.7em;
   font-weight: 400;
   margin: 0;
-  margin-left: 0.3rem;
-  margin-right: 0.3rem;
+  padding-bottom: 0.1rem;
   padding-left: 0.3rem;
-  padding-right: 0.3rem;
-  padding-top: 0.6rem;
+  padding-right: calc(0.3rem + 0.2px);
+  padding-top: 0.4rem;
   word-break: normal;
 
   :global(.katex) {
