--- a/src/components/SocialBar.module.scss
+++ b/src/components/SocialBar.module.scss
@@ -12,12 +12,9 @@
 
   @media (max-width: $mobile-max) {
     flex-direction: row;
-    margin-left: calc(2.1rem);
-    margin-left: calc(2.1rem + constant(safe-area-inset-left));
-    margin-left: calc(2.1rem + env(safe-area-inset-left));
-    margin-right: calc(2.1rem);
-    margin-right: calc(2.1rem + constant(safe-area-inset-right));
-    margin-right: calc(2.1rem + env(safe-area-inset-right));
+    margin: 0 2.1rem;
+    margin: 0 calc(2.1rem + constant(safe-area-inset-left)) 0 calc(2.1rem + constant(safe-area-inset-right));
+    margin: 0 calc(2.1rem + env(safe-area-inset-left)) 0 calc(2.1rem + env(safe-area-inset-right));
     opacity: 0;
     transform: scale(1.15) translateY(-30px);
     transition: transform 0.5s $cubic, opacity 0.6s $cubic;
