--- a/src/components/TableOfContents.module.scss
+++ b/src/components/TableOfContents.module.scss
@@ -14,12 +14,9 @@
 }
 
 @mixin horizontal-margin {
-  margin-left: calc(2.1rem);
-  margin-left: calc(2.1rem + constant(safe-area-inset-left));
-  margin-left: calc(2.1rem + env(safe-area-inset-left));
-  margin-right: calc(2.1rem);
-  margin-right: calc(2.1rem + constant(safe-area-inset-right));
-  margin-right: calc(2.1rem + env(safe-area-inset-right));
+  margin: 0 2.1rem;
+  margin: 0 calc(2.1rem + constant(safe-area-inset-left)) 0 calc(2.1rem + constant(safe-area-inset-right));
+  margin: 0 calc(2.1rem + env(safe-area-inset-left)) 0 calc(2.1rem + env(safe-area-inset-right));
 }
 
 .tableOfContents {
