--- a/src/components/Navigation.module.scss
+++ b/src/components/Navigation.module.scss
@@ -50,12 +50,9 @@
     flex-direction: column;
     flex-grow: 0;
     flex-shrink: 0;
-    padding-left: 0;
-    padding-left: constant(safe-area-inset-left);
-    padding-left: env(safe-area-inset-left);
-    padding-right: 0;
-    padding-right: constant(safe-area-inset-right);
-    padding-right: env(safe-area-inset-right);
+    padding: 0;
+    padding: 0 constant(safe-area-inset-right) 0 constant(safe-area-inset-left);
+    padding: 0 env(safe-area-inset-right) 0 env(safe-area-inset-left);
 
     @media (max-width: $mobile-max) {
       align-items: center;
