--- a/src/components/ContentSeparator.module.scss
+++ b/src/components/ContentSeparator.module.scss
@@ -1,18 +1,26 @@
 @import '../styles/colors';
 @import '../styles/responsive';
 
-.contentSeparator {
-  align-items: center;
-  border: 0;
-  border-top: 1px solid $_gray-89;
-  display: flex;
-  flex-direction: row;
-  margin: 0;
-  padding: 0;
-
+.marginBox {
   @media (max-width: $mobile-max) {
-    margin: 0 -2.1rem;
-    margin: 0 calc(-2.1rem - constant(safe-area-inset-right)) 0 calc(-2.1rem - constant(safe-area-inset-right));
-    margin: 0 calc(-2.1rem - env(safe-area-inset-right)) 0 calc(-2.1rem - env(safe-area-inset-right));
+    margin-left: - constant(safe-area-inset-left);
+    margin-left: - env(safe-area-inset-right);
+    margin-right: - constant(safe-area-inset-left);
+    margin-right: - env(safe-area-inset-right);
+  }
+
+  .contentSeparator {
+    align-items: center;
+    border: 0;
+    border-top: 1px solid $_gray-89;
+    display: flex;
+    flex-direction: row;
+    margin: 0;
+    padding: 0;
+
+    @media (max-width: $mobile-max) {
+      margin-left: -2.1rem;
+      margin-right: -2.1rem;
+    }
   }
 }
