--- a/src/components/Navigation.module.scss
+++ b/src/components/Navigation.module.scss
@@ -50,9 +50,10 @@
     flex-direction: column;
     flex-grow: 0;
     flex-shrink: 0;
-    padding: 0;
-    padding: 0 constant(safe-area-inset-right) 0 constant(safe-area-inset-left);
-    padding: 0 env(safe-area-inset-right) 0 env(safe-area-inset-left);
+    padding-left: constant(safe-area-inset-left);
+    padding-left: env(safe-area-inset-left);
+    padding-right: constant(safe-area-inset-right);
+    padding-right: env(safe-area-inset-right);
 
     @media (max-width: $mobile-max) {
       align-items: center;
@@ -60,7 +61,7 @@
       flex-direction: row;
       justify-content: space-between;
       height: 44px;
-      max-width: 100vw;
+      max-width: 100%;
       margin: 0;
     }
 
