--- a/src/components/InlineCode.module.scss
+++ b/src/components/InlineCode.module.scss
@@ -8,6 +8,7 @@
   font-family: $font-text-monospaced;
   font-size: calc(13em / 17);
   font-weight: 400;
+  font-style: normal;
   line-height: calc(29 / 13);
   margin-bottom: -0.4rem;
   margin-top: -0.6rem;
