Adds a flex wrapper to inline segment.

--- a/src/components/InlineSegment.module.scss
+++ b/src/components/InlineSegment.module.scss
@@ -1,7 +1,10 @@
-.inlineSegment {
+.flexWrapper {
   align-items: stretch;
   display: flex;
   flex-direction: column;
+}
+
+.inlineSegment {
 
   > :first-child {
     margin-top: 0;
